Added and improved admin and ops features
